--- a/gb/19/11/5/n11634381.md
+++ b/gb/19/11/5/n11634381.md
@@ -1,62 +1,59 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/mprjd2205/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/n24hr.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/news392.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/news2007.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/news2008.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/ncyule.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/nsc1002.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/9p.md#1">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/mprjd2205/www/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/mprjd2205/ntdtv/blob/master/gb/prog1530_1.md#1">ºÍÆ½¿¹Òé</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>ÖÐ¹²´ËÊ±ÍÆ26Ìõ ²ÌÓ¢ÎÄ£ºÒâÍ¼Ó°ÏìÌ¨Íå´óÑ¡</h2>
-<img src="http://i.epochtimes.com/assets/uploads/2019/11/019-11-03.15-600x400.jpg" />
-<h6>ÖÐ»ªÃñ¹ú×ÜÍ³²ÌÓ¢ÎÄ¡££¨ÊÚÈ¨Ó°Æ¬½ØÍ¼£©
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒ"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="è¯„è®º"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="æ–‡åŒ–"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="ç”Ÿæ´»"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="å¨±ä¹"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="å¥åº·"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="è´­ç‰©"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="ææ¬¾"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">ç¿»å¢™</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">å’Œå¹³æŠ—è®®</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>ä¸­å…±æ­¤æ—¶æŽ¨26æ¡ è”¡è‹±æ–‡ï¼šæ„å›¾å½±å“å°æ¹¾å¤§é€‰</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2019/11/019-11-03.15-600x400.jpg" />
+<h6>ä¸­åŽæ°‘å›½æ€»ç»Ÿè”¡è‹±æ–‡ã€‚ï¼ˆæŽˆæƒå½±ç‰‡æˆªå›¾ï¼‰
 </h6>
 <hr>
-<p>¡¾´ó¼ÍÔª2019Äê11ÔÂ05ÈÕÑ¶¡¿4ÈÕ£¬ÖÐ¹²ÍÆ³ö¶ÔÌ¨26Ïî´ëÊ©£¬×ÜÍ³<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E8%94%A1%E8%8B%B1%E6%96%87.md">²ÌÓ¢ÎÄ</a>½ñÌìÔÚÆÁ¶«ÊÜ·ÃÊ±±íÊ¾£¬²»ÂÛÏÈÇ°Ìá³öµÄ31Ïî´ëÊ©£¬»òÊÇÏÖÔÚÌá³öµÄ26Ìõ£¬¶¼ÊÇÔÚ¡°<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E4%B8%80%E5%9B%BD%E4%B8%A4%E5%88%B6.md">Ò»¹úÁ½ÖÆ</a>Ì¨Íå·½°¸¡±µÄÂö¸ìÏÂËùÌá³öµÄ·½°¸¡£ËýÒ²Ö±Ö¸£¬ÖÐ¹²ÔÚÌ¨Íå´óÑ¡ÆÚ¼äÌá³ö£¬¾ÍÊÇÒâÍ¼Ó°ÏìÌ¨ÍåÑ¡¾Ù¡£</p>
-<figure id="attachment_11634511" style="width: 600px" class="wp-caption aligncenter"><a href="http://i.epochtimes.com/assets/uploads/2019/11/19-11-03.16.jpg"><img class="size-large wp-image-11634511" src="http://i.epochtimes.com/assets/uploads/2019/11/19-11-03.16-600x405.jpg" alt="" width="600" b="405" /></a><figcaption class="wp-caption-text">ÖÐ»ªÃñ¹ú×ÜÍ³<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E8%94%A1%E8%8B%B1%E6%96%87.md">²ÌÓ¢ÎÄ</a>¡££¨ÊÚÈ¨Ó°Æ¬½ØÍ¼£©</figcaption></figure>
-<p>ÖÐ»ªÃñ¹ú×ÜÍ³²ÌÓ¢ÎÄ£º¡°ÎÒ¾õµÃ²»ÂÛÊÇÏÈÇ°Ìá³öÀ´µÄ31Ïî´ëÊ©£¬»òÊÇÏÖÔÚÌá³öÀ´µÄ26Ìõ£¬ÆäÊµ¶¼ÊÇÔÚÖÐ¹ú£¨¹²£©µÄ<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E4%B8%80%E5%9B%BD%E4%B8%A4%E5%88%B6.md">Ò»¹úÁ½ÖÆ</a>Ì¨Íå·½°¸µÄÂöÂçÀïÃæ£¬ËùÌá³öµÄ·½°¸£¬ÓÃÒâÒ²ºÜÇå³þ£¬¾ÍÊÇÖÐ¹ú£¨¹²£©ÒÑ¾­¶¨µ÷Ò»¹úÁ½ÖÆ£¬ËùÒÔËüÃÇÏÖÔÚÈ«Á¦ÔÚÍÆ¡£ÏÖÔÚÕýÔÚ´óÑ¡ÆÚ¼ä£¬ÔÚÕâ¸öÊ±¿ÌÌá³öÀ´£¬µ±È»ËüµÄÓÃÒâ£¬ÎÒÃÇÒ²ºÜ×ÔÈ»¶øÈ»Ïëµ½£¬ËüÕâ¸öÊÇÒªÒâÍ¼À´Ó°ÏìÎÒÃÇµÄ´óÑ¡¡£¡±</p>
-<figure id="attachment_11634514" style="width: 600px" class="wp-caption aligncenter"><a href="http://i.epochtimes.com/assets/uploads/2019/11/2019-11-053.16.jpg"><img class="size-large wp-image-11634514" src="http://i.epochtimes.com/assets/uploads/2019/11/2019-11-053.16-600x404.jpg" alt="" width="600" b="404" /></a><figcaption class="wp-caption-text">ÖÐ»ªÃñ¹ú×ÜÍ³²ÌÓ¢ÎÄ¡££¨ÊÚÈ¨Ó°Æ¬½ØÍ¼£©</figcaption></figure>
-<p>²ÌÓ¢ÎÄÉÏÎç³öÏ¯¡°<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E9%AB%98%E9%9B%84%E8%8D%A3%E6%80%BB%E5%B1%8F%E4%B8%9C%E5%A4%A7%E6%AD%A6%E5%88%86%E9%99%A2%E5%8A%A8%E5%9C%9F%E5%85%B8%E7%A4%BC.md">¸ßÐÛÈÙ×ÜÆÁ¶«´óÎä·ÖÔº¶¯ÍÁµäÀñ</a>¡±£¬½ÓÊÜÃ½Ìå²É·ÃÊ±£¬³ýÁËÌáµ½ÖÐ¹²26ÌõÍâ£¬Ò²Ì¸µ½Õþ¸®½«¸ü×¢Òâ¹ú¼Ò°²È«£¬±ÜÃâ´óÑ¡ÆÚ¼ä£¬Ì¨ÍåÊÜµ½¼ÙÑ¶Ï¢ºÍÍøÂ·µÄ¹¥»÷¡£</p>
-<p><center><a class="no-margin" src="https://vs.youmaker.com/2019/1105/e0e0da3d-170a-4374-75c0-e10971030c58?r=16x9&amp;s=720x480&amp;d=78" width="600" b="338" frameborder="0" allowfullscreen="allowfullscreen"></a></center>ÔðÈÎ±à¼­£º³Â°²</p>
+<p>ã€å¤§çºªå…ƒ2019å¹´11æœˆ05æ—¥è®¯ã€‘4æ—¥ï¼Œä¸­å…±æŽ¨å‡ºå¯¹å°26é¡¹æŽªæ–½ï¼Œæ€»ç»Ÿ<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E8%94%A1%E8%8B%B1%E6%96%87.md#1">è”¡è‹±æ–‡</a>ä»Šå¤©åœ¨å±ä¸œå—è®¿æ—¶è¡¨ç¤ºï¼Œä¸è®ºå…ˆå‰æå‡ºçš„31é¡¹æŽªæ–½ï¼Œæˆ–æ˜¯çŽ°åœ¨æå‡ºçš„26æ¡ï¼Œéƒ½æ˜¯åœ¨â€œ<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%B8%80%E5%9B%BD%E4%B8%A4%E5%88%B6.md#1">ä¸€å›½ä¸¤åˆ¶</a>å°æ¹¾æ–¹æ¡ˆâ€çš„è„‰èƒ³ä¸‹æ‰€æå‡ºçš„æ–¹æ¡ˆã€‚å¥¹ä¹Ÿç›´æŒ‡ï¼Œä¸­å…±åœ¨å°æ¹¾å¤§é€‰æœŸé—´æå‡ºï¼Œå°±æ˜¯æ„å›¾å½±å“å°æ¹¾é€‰ä¸¾ã€‚</p>
+<figure id="attachment_11634511" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/11/19-11-03.16.jpg"><img class="size-large wp-image-11634511" src="https://i.epochtimes.com/assets/uploads/2019/11/19-11-03.16-600x405.jpg" alt="" width="600" b="405" /></a><figcaption class="wp-caption-text">ä¸­åŽæ°‘å›½æ€»ç»Ÿ<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E8%94%A1%E8%8B%B1%E6%96%87.md#1">è”¡è‹±æ–‡</a>ã€‚ï¼ˆæŽˆæƒå½±ç‰‡æˆªå›¾ï¼‰</figcaption></figure>
+<p>ä¸­åŽæ°‘å›½æ€»ç»Ÿè”¡è‹±æ–‡ï¼šâ€œæˆ‘è§‰å¾—ä¸è®ºæ˜¯å…ˆå‰æå‡ºæ¥çš„31é¡¹æŽªæ–½ï¼Œæˆ–æ˜¯çŽ°åœ¨æå‡ºæ¥çš„26æ¡ï¼Œå…¶å®žéƒ½æ˜¯åœ¨ä¸­å›½ï¼ˆå…±ï¼‰çš„<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%B8%80%E5%9B%BD%E4%B8%A4%E5%88%B6.md#1">ä¸€å›½ä¸¤åˆ¶</a>å°æ¹¾æ–¹æ¡ˆçš„è„‰ç»œé‡Œé¢ï¼Œæ‰€æå‡ºçš„æ–¹æ¡ˆï¼Œç”¨æ„ä¹Ÿå¾ˆæ¸…æ¥šï¼Œå°±æ˜¯ä¸­å›½ï¼ˆå…±ï¼‰å·²ç»å®šè°ƒä¸€å›½ä¸¤åˆ¶ï¼Œæ‰€ä»¥å®ƒä»¬çŽ°åœ¨å…¨åŠ›åœ¨æŽ¨ã€‚çŽ°åœ¨æ­£åœ¨å¤§é€‰æœŸé—´ï¼Œåœ¨è¿™ä¸ªæ—¶åˆ»æå‡ºæ¥ï¼Œå½“ç„¶å®ƒçš„ç”¨æ„ï¼Œæˆ‘ä»¬ä¹Ÿå¾ˆè‡ªç„¶è€Œç„¶æƒ³åˆ°ï¼Œå®ƒè¿™ä¸ªæ˜¯è¦æ„å›¾æ¥å½±å“æˆ‘ä»¬çš„å¤§é€‰ã€‚â€</p>
+<figure id="attachment_11634514" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/11/2019-11-053.16.jpg"><img class="size-large wp-image-11634514" src="https://i.epochtimes.com/assets/uploads/2019/11/2019-11-053.16-600x404.jpg" alt="" width="600" b="404" /></a><figcaption class="wp-caption-text">ä¸­åŽæ°‘å›½æ€»ç»Ÿè”¡è‹±æ–‡ã€‚ï¼ˆæŽˆæƒå½±ç‰‡æˆªå›¾ï¼‰</figcaption></figure>
+<p>è”¡è‹±æ–‡ä¸Šåˆå‡ºå¸­â€œ<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E9%AB%98%E9%9B%84%E8%8D%A3%E6%80%BB%E5%B1%8F%E4%B8%9C%E5%A4%A7%E6%AD%A6%E5%88%86%E9%99%A2%E5%8A%A8%E5%9C%9F%E5%85%B8%E7%A4%BC.md#1">é«˜é›„è£æ€»å±ä¸œå¤§æ­¦åˆ†é™¢åŠ¨åœŸå…¸ç¤¼</a>â€ï¼ŒæŽ¥å—åª’ä½“é‡‡è®¿æ—¶ï¼Œé™¤äº†æåˆ°ä¸­å…±26æ¡å¤–ï¼Œä¹Ÿè°ˆåˆ°æ”¿åºœå°†æ›´æ³¨æ„å›½å®¶å®‰å…¨ï¼Œé¿å…å¤§é€‰æœŸé—´ï¼Œå°æ¹¾å—åˆ°å‡è®¯æ¯å’Œç½‘è·¯çš„æ”»å‡»ã€‚</p>
+<p><center><a class="no-margin" src="https://vs.youmaker.com/2019/1105/e0e0da3d-170a-4374-75c0-e10971030c58?r=16x9&amp;s=720x480&amp;d=78" width="600" b="338" frameborder="0" allowfullscreen="allowfullscreen"></a></center>è´£ä»»ç¼–è¾‘ï¼šé™ˆå®‰</p>
 
 <hr>
 
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/11/5/n11634381.htm">ÖÐ¹²´ËÊ±ÍÆ26Ìõ ²ÌÓ¢ÎÄ£ºÒâÍ¼Ó°ÏìÌ¨Íå´óÑ¡</a>
 
-
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/11/4/n11632743.htm">ÖÐ¹²ÎÄ¹¤ÍÅ¿ÉÈë¾³ Ì¨Á¢Î¯£ºÁªÉó»á±ê×¼ÔÚÄÄ£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/4/n11632639.htm">Ñ§´û´ôÕËÒªÕþ¸®ÍÌ£¿²Ì°ì£ºº«¹úè¤ÒªÏÈËµÇå³þ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/4/n11632093.htm">²ÌÓ¢ÎÄ£º¹ú¼ÊÍ¦Ì¨Á¦µÀÔöÇ¿ Ì¨ÃÀ¹ØÏµÓúÀ´Óú½ôÃÜ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/1/n11627095.htm">Ì¨Íå»ù½ø£ºÍö¹ú¸ÐµÄ¼Óº¦ÕßÊÇÖÐ¹²</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/1/n11627315.htm">ÄÑÍüÓêÖÐÖúÑ¡ ÀµÇåµÂÊ×Õ¾Á¦Í¦¸ß¼Îè¤</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/1/n11626925.htm">ÔøÈÎÍú±¨Ö÷±Ê ÖÐ¹²¹úÆó Ê©ÕýÆÁÔÚÖÐ¹ú±»Ê§×Ù</a></li>
-
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/11/5/n11635571.htm">±±¾©40Ïî½»Ò×»»Âí¿ËÁú³Å½ø²©»á È´ÔâÆäÅúÆÀ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/5/n11635931.htm">ÍõÐ¡ºéÈÎÖÐ¹²ÐÂÉè»ú¹¹ÌØÇÚ¾Ö¾Ö³¤ Òý²Â²â</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/5/n11635908.htm">ÖØÇì¸±Êé¼Ç´«×¹Â¥Íö ÒÉÎªËÄÖÐÈ«»áÈ¨¶·ÎþÉüÆ·</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/5/n11633731.htm">¡¾·­Ç½±Ø¿´¡¿ÄÄ¼¸ÈËÈ±Ï¯ÖÐ¹²ËÄÖÐÈ«»á£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/11/n11582046.htm">ÌÆ´úÊ¹ÕßÆ¯Á÷µ½¾ÞÈË¹ú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/24/n11610229.htm">³ö¼Ò²»¶ÝÊÀ ¸¨ÖúÃ÷³É×æµÃÌìÏÂµÄ¹ÖÉ®µÀÑÜ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/25/n11612042.htm">¡¾²Å×Ó¼ÑÈË¡¿Áº×£µÄ¹ÊÊÂ ÎÒÃÇ¶Á¶®ÁËÂð£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/28/n11617434.htm">¡¾ÀúÊ·»Øíø¡¿Ô¶ÀëÖÐ¹² ÔÚ¸Û½¨ÖÐÎÄ´óÑ§µÄÇ®ÄÂ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/5/n11635408.htm">´ø×´ðåÕîÈÃÈË¾çÍ´ÎÞ±È ÃâÒß²îÒ×·¢×÷ 2ÕÐÔ¤·À</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/1/n11627674.htm">ÇïÌìÑø·ÎÊ³ÎïÓÐÄÄÐ©£¿ÖÐÒ½¼ö4Î¶Ò©ÉÅ Èó·ÎÖ¹¿È</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/5/n11634911.htm">Ì¨ÍåÍÆ¼¹ÁºÉ½ÂöÂÃÓÎ ×¨¼ÒÔÞ°¢ÀïÉ½Ö®ÃÀ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/6/n11636609.htm">ÍøÃñPÍ¼£ºÎÞµÐ¾ÞÃ¨Áè¼Ý¸÷Ê½¾üÊÂÎäÆ÷Ö®ÉÏ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/6/n11636256.htm">ËÄÎïÌÀÊÇ²¹ÑªÊ¥Æ· ÓÐ4´óÒûÓÃ½û¼É</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/4/n11632989.htm">¡¾ÐÂÎÅ¿´µã¡¿Ïã¸ÛÑªÐÈ¶¸Ôö Ï°½²»°¹ÙÃ½Â©±¨£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/5/n11633716.htm">¡¾ÅÄ°¸¾ªÆæ¡¿Ïã¸ÛÏÖ¿Ö²À ÁÖÖ£¼ûº«ÕýÎª23Ìõ£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/4/n11633107.htm">¡¾ÐÂÎÅ¿´µã¡¿ÎÞ¾å±¨¸´ ²¼À­¸ñ½â³ý±±¾©æ¢ÃÃ³Ç</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/4/n11633229.htm">È±Ï¯ÖÐ¹²ËÄÖÐÈ«»áµÄ5ÈË¶¼ÓÐË­£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/3/n11631025.htm">ÄâÄêµ×ÒÆÃñÌ¨Íå ÏôÈôÔª£ºÀë¿ªÏã¸ÛÊÇ¼þÍ´¿àÊÂ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/4/n11633083.htm">Ï°½üÆ½ÉÏº£¼ûÁÖÖ£ÔÂ¶ð ¹«°²²¿³¤ËæÐÐ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/3/n11631025.htm">ÄâÄêµ×ÒÆÃñÌ¨Íå ÏôÈôÔª£ºÀë¿ªÏã¸ÛÊÇ¼þÍ´¿àÊÂ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/3/n11631219.htm">ÒÅ´«Àîö¦ÀÙÌì¸³ ÍõÁ¦ºê3ËêÅ®¶ùÕ¹»­¹¦</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/3/n11630758.htm">·¶±ù±ù¸ßÔÆÏèºÏÅÄ¾ç»»½ÇÖØÅÄ È·¶¨ÐÂ½ÇÒÑ½ø×é</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/4/n11632910.htm">Ò¶ÔÌÒÇÔÚÎÚ¿ËÀ¼¶ÀÁ¢¹ã³¡·¢Éù£ºÐÄÓëÏã¸ÛÏàÁª</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/4/n11631669.htm">–Í¹ú¼Ý³µÊèÊ§µ¼ÖÂÊÂ¹Ê Big HitÓéÀÖ·¢ÉùÃ÷ÖÂÇ¸</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/11/n11582046.htm">ÌÆ´úÊ¹ÕßÆ¯Á÷µ½¾ÞÈË¹ú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/24/n11610229.htm">³ö¼Ò²»¶ÝÊÀ ¸¨ÖúÃ÷³É×æµÃÌìÏÂµÄ¹ÖÉ®µÀÑÜ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/25/n11612042.htm">¡¾²Å×Ó¼ÑÈË¡¿Áº×£µÄ¹ÊÊÂ ÎÒÃÇ¶Á¶®ÁËÂð£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/28/n11617434.htm">¡¾ÀúÊ·»Øíø¡¿Ô¶ÀëÖÐ¹² ÔÚ¸Û½¨ÖÐÎÄ´óÑ§µÄÇ®ÄÂ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/25/n11611601.htm">¡°Ò»ÅµÇ§½ð¡± ÈÃÈËÉúËÀÏàÐí£¡</a></li>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/11/4/n11632743.md#1">ä¸­å…±æ–‡å·¥å›¢å¯å…¥å¢ƒ å°ç«‹å§”ï¼šè”å®¡ä¼šæ ‡å‡†åœ¨å“ªï¼Ÿ</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/11/4/n11632639.md#1">å­¦è´·å‘†è´¦è¦æ”¿åºœåžï¼Ÿè”¡åŠžï¼šéŸ©å›½ç‘œè¦å…ˆè¯´æ¸…æ¥š</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/11/4/n11632093.md#1">è”¡è‹±æ–‡ï¼šå›½é™…æŒºå°åŠ›é“å¢žå¼º å°ç¾Žå…³ç³»æ„ˆæ¥æ„ˆç´§å¯†</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/11/1/n11627095.md#1">å°æ¹¾åŸºè¿›ï¼šäº¡å›½æ„Ÿçš„åŠ å®³è€…æ˜¯ä¸­å…±</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/11/1/n11627315.md#1">éš¾å¿˜é›¨ä¸­åŠ©é€‰ èµ–æ¸…å¾·é¦–ç«™åŠ›æŒºé«˜å˜‰ç‘œ</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/11/1/n11626925.md#1">æ›¾ä»»æ—ºæŠ¥ä¸»ç¬” ä¸­å…±å›½ä¼ æ–½æ­£å±åœ¨ä¸­å›½è¢«å¤±è¸ª</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/mprjd2205/djy/blob/master/gb/19/11/5/n11634381.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/mprjd2205/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/mprjd2205/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/mprjd2205/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/10/29/n11620595.md#1">å­¦è€…æŠµåŠ æ‹¿å¤§è°ˆå°æ¹¾å¤§é€‰ æ­ä¸­å…±æ¸—é€</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/10/28/n11616555.md#1">ã€åå­—è·¯å£ã€‘å°æ¹¾å¤§é€‰ ä¸­å…±ç”¨8å¤§æ‰‹æ®µå¹²é¢„</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/3/n11766427.md#1" target="_blank">å¼ æž—ï¼šå…±å†›åœ¨æœé²œæˆ˜äº‰ä¸­ä¸§ç”Ÿä¸¤ç™¾ä¸‡ï¼ˆ2ï¼‰</a></li><li><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank">æ°¸æ’çš„è§è¯</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/22/n10994483.md#1" target="_blank">çº¢æ–‘ç‹¼ç–®ç—…è‹¦åå¹´ å¥¹å¶é‡ä¸€çº¸â€œå¿ƒçµè¯å•â€</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943071.md#1">ã€çŽ°åœºè§†é¢‘ã€‘æ­¦æ±‰åŒ»ç”Ÿæ­ä¸­å…±å…³é—­æ–¹èˆ±å†…å¹•</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942593.md#1">ã€ç–«æƒ…é€è§†ã€‘æ¸¯æŠ—ç–«æ˜¾å¥‡è¿¹ å¤©ç­ä¸­å…±æˆä¿å‘½ç¬¦</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943372.md#1">â€œå›žå›½é¿ç–«â€å’Œâ€œä¸­å›½å¼æ’¤ä¾¨â€çš„çœŸç›¸</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942860.md#1">ã€æœ€æ–°ç–«æƒ…3.16ã€‘æ—§é‡‘å±±åœ°åŒº700ä¸‡äººå±…å®¶é˜²ç–«</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">å¤ä»Šä¸­å¤–é¢„è¨€ä¸­çš„2020å¹´</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/29/n11905232.md#1">è—è™«ç¾¤æ”»å®˜åºœå¼‚è±¡ ä¸ºä½•åƒå°½ç”»åƒäººå¤´ï¼Ÿ</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11925830.md#1">è¢«æ‰’çš®çš„æ³•å®˜</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/28/n11903572.md#1">æœ«ä»£å›½å›çš„é£ŽèŒƒ é¡ºä»Žå¤©æ„çš„å…ƒæƒ å®—</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942373.md#1">å›¾è¯è—è™«å¤§å†›è‚†è™ ä¸­å…±æ€¥å®šé¢„æ¡ˆæéš¾åº”å¯¹</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940769.md#1">ã€æ–°é—»çœ‹ç‚¹ã€‘ç—…æ¯’æ¥è‡ªå“ªé‡Œï¼Ÿå·æ™®ï¼šä¸­ç¾Žéƒ½çŸ¥é“</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11941017.md#1">ã€çŽ°åœºè§†é¢‘ã€‘ä¸œèŽžè™Žé—¨é•‡çŽ°å¤§é‡é˜²æš´è­¦å¯Ÿ</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11945355.md#1">ç–«æƒ…å½±å“æ— æ³•å¼€ä¸š å±±ä¸œå•†æˆ·åå‡ç§Ÿé­æš´åŠ›æŠ“æ•</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11945531.md#1">æ­¦æ±‰äººæ–¥å®˜å‘˜ï¼šç»™ä½ æ”¹æ­£æœºä¼š è°ç»™æˆ‘æ´»å‘½æœºä¼š</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11941189.md#1">ã€ä¸€çº¿é‡‡è®¿è§†é¢‘ç‰ˆã€‘æ­¦æ±‰å¸‚æ°‘ï¼šé¦–å…ˆè¦æ´»ä¸‹æ¥</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942589.md#1">èµµç«‹åšç”©é”…ç—…æ¯’æºè‡ªç¾Žå›½ è‰ºäººé»„ç§‹ç”Ÿç‹ é…¸ä¸­å…±</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942781.md#1">æ½˜è¿Žç´«å‘¼å¸é“æ„ŸæŸ“æ€¥å°±åŒ» è¢«è¦æ±‚æ£€æµ‹æ–°å† ç—…æ¯’</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942415.md#1">è¥¿ç­ç‰™ç–«æƒ…å¤§çˆ†å‘ æ¢å’çªä¸€å®¶ä¸‰å£å°åŸŽå‰è¿”æ¸¯</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943288.md#1">å¤å·¨åŸºå®£å¸ƒå½“çˆ¸ æ™’å®å®åˆç…§åˆ†äº«å–œæ‚¦</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943213.md#1">åˆä¸€å¥½èŽ±åžæ˜Žæ˜Ÿç¡®è¯Š 007é‚¦å¥³éƒŽéš”ç¦»åœ¨å®¶</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/11/5/n11634381.htm">ä¸­å…±æ­¤æ—¶æŽ¨26æ¡ è”¡è‹±æ–‡ï¼šæ„å›¾å½±å“å°æ¹¾å¤§é€‰</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/19/11/5/n11634381.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="å…³æ³¨3äº¿äººä¸‰é€€"  alt="å…³æ³¨3äº¿äººä¸‰é€€"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
